--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "tsc-watch --onSuccess \"node dist/index.js\"",
+    "start": "node dist/prueba-hoy.js",
+    "dev": "tsc-watch --onSuccess \"node dist/prueba-hoy.js\"",
     "doc": "typedoc",
     "test": "npx vitest run --watch",
     "coverage": "vitest run --coverage --coverage.include **/src/*",
-    "comando": "node dist/index.js"
+    "comando": "node dist/prueba-hoy.js"
   },
   "keywords": [],
   "author": "",
